# poscomp-classification

./: pyproject.toml
data/processed/: df_preprocessed.csv  df_selected.csv
data/raw/: poscomp_2016_2022.csv
notebooks/: preprocessing.ipynb  selection.ipynb
notebooks/utils/: save_dataframe.py  show_unique_values.py  variables.py
